--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,11 @@ jobs:
 
       - name: Create ZIP file
         run: |
-          zip -r mod_clickmeeting.latest.zip . -x "*.git*"
+          zip -r mod_clickmeeting.zip . -x "*.git*"
 
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
         with:
-          files: mod_clickmeeting.latest.zip
+          files: mod_clickmeeting.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
