--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -8,7 +8,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:13
+        image: postgres:15
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -17,7 +17,7 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
 
       mariadb:
-        image: mariadb:10
+        image: mariadb:10.11
         env:
           MYSQL_USER: 'root'
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
@@ -30,11 +30,39 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['7.4', '8.0', '8.1']
-#        php: ['7.4']
-        moodle-branch: ['MOODLE_401_STABLE']
-        database: [pgsql, mariadb]
-#        database: [mariadb]
+        include:
+          # Moodle 4.0.1 - PHP 7.4, 8.0, 8.1
+          - php: '7.4'
+            moodle-branch: 'MOODLE_401_STABLE'
+            database: pgsql
+          - php: '8.0'
+            moodle-branch: 'MOODLE_401_STABLE'
+            database: pgsql
+          - php: '8.1'
+            moodle-branch: 'MOODLE_401_STABLE'
+            database: pgsql
+          - php: '7.4'
+            moodle-branch: 'MOODLE_401_STABLE'
+            database: mariadb
+          - php: '8.0'
+            moodle-branch: 'MOODLE_401_STABLE'
+            database: mariadb
+          - php: '8.1'
+            moodle-branch: 'MOODLE_401_STABLE'
+            database: mariadb
+          # Moodle 4.0.5 - 8.1, 8.2
+          - php: '8.1'
+            moodle-branch: 'MOODLE_405_STABLE'
+            database: pgsql
+          - php: '8.2'
+            moodle-branch: 'MOODLE_405_STABLE'
+            database: pgsql
+          - php: '8.1'
+            moodle-branch: 'MOODLE_405_STABLE'
+            database: mariadb
+          - php: '8.2'
+            moodle-branch: 'MOODLE_405_STABLE'
+            database: mariadb
 
     steps:
       - name: Check out repository code
@@ -48,9 +76,7 @@ jobs:
           php-version: ${{ matrix.php }}
           extensions: ${{ matrix.extensions }}
           ini-values: max_input_vars=5000
-          # If you are not using code coverage, keep "none". Otherwise, use "pcov" (Moodle 3.10 and up) or "xdebug".
-          # If you try to use code coverage with "none", it will fallback to phpdbg (which has known problems).
-          coverage: none
+          coverage: pcov
 
       - name: Initialise moodle-plugin-ci
         run: |
